--- a/engine/dependencies/CMakeLists.txt
+++ b/engine/dependencies/CMakeLists.txt
@@ -7,5 +7,14 @@ set_target_properties(glad zlib freetype mimas
     PROPERTIES
     FOLDER "${ENGINE_DEPENDENCIES_FOLDER}"
     POSITION_INDEPENDENT_CODE TRUE
-    COMPILE_OPTIONS ${ENGINE_CXX_DEPENDENCIES_FLAGS}
 )
+
+target_compile_options(glad PRIVATE ${ANTON_DEPENDENCIES_COMPILE_FLAGS})
+target_compile_options(zlib PRIVATE ${ANTON_DEPENDENCIES_COMPILE_FLAGS})
+target_compile_options(freetype PRIVATE ${ANTON_DEPENDENCIES_COMPILE_FLAGS})
+target_compile_options(mimas PRIVATE ${ANTON_DEPENDENCIES_COMPILE_FLAGS})
+
+target_link_options(glad PRIVATE ${ANTON_DEPENDENCIES_LINK_FLAGS})
+target_link_options(zlib PRIVATE ${ANTON_DEPENDENCIES_LINK_FLAGS})
+target_link_options(freetype PRIVATE ${ANTON_DEPENDENCIES_LINK_FLAGS})
+target_link_options(mimas PRIVATE ${ANTON_DEPENDENCIES_LINK_FLAGS})
