--- a/engine/tools/CMakeLists.txt
+++ b/engine/tools/CMakeLists.txt
@@ -8,7 +8,7 @@ set_target_properties(${PROJECT_NAME}
     FOLDER ${ENGINE_TOOLS_FOLDER}
 )
 
-target_compile_options(Codegen PRIVATE ${ENGINE_CXX_FLAGS})
+target_compile_options(Codegen PRIVATE ${ANTON_COMPILE_FLAGS})
 
 add_subdirectory(codegen/private)
 add_subdirectory(codegen/public)
@@ -47,3 +47,16 @@ endif()
 if(ENGINE_COMPILER_UNKNOWN)
     target_compile_definitions(Codegen PRIVATE ANTON_COMPILER_UNKNOWN)
 endif()
+
+set_target_properties(Codegen
+    PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
+    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
+    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
+    ARCHIVE_OUTPUT_DIRECTORY "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
+    ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
+    ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
+    LIBRARY_OUTPUT_DIRECTORY "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
+    LIBRARY_OUTPUT_DIRECTORY_DEBUG "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
+    LIBRARY_OUTPUT_DIRECTORY_RELEASE "${ENGINE_BINARY_OUTPUT_DIRECTORY}"
+)
