fxd widgets being added to dc when wnd not visible

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ set(ENGINE_DEPENDENCIES_FOLDER "Dependencies")
 set(ENGINE_TOOLS_FOLDER "Tools")
 
 set(ENGINE_WITH_EDITOR 1)
-set(ANTON_BUILD_WITH_ASAN TRUE)
+set(ANTON_BUILD_WITH_ASAN FALSE)
 set(ANTON_BUILD_TOOLS FALSE)
 
 if("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
