--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ set(ENGINE_DEPENDENCIES_FOLDER "Dependencies")
 set(ENGINE_TOOLS_FOLDER "Tools")
 
 set(ENGINE_WITH_EDITOR 1)
+set(ANTON_JSON_VERIFY_TYPE 1)
 set(ANTON_BUILD_WITH_ASAN FALSE)
 set(ANTON_BUILD_TOOLS FALSE)
 
